<resources>
    <string name="app_name">encuestas</string>
    <string name="facebook_app_id">151266922375124</string>
    <string name="fb_login_protocol_scheme">fb151266922375124</string>
    <string name="config_tit_encuestas">Creador de encuestas</string>
    <string name="config_lab_tipo_encuesta">Tipo de Encuesta:</string>
    <string name="config_lab_nombre_encuesta">Nombre:</string>
    <string name="config_lab_num_pre_encuesta">Número de preguntas:</string>
    <string name="config_lab_num_res_encuesta">Número de respuestas</string>
    <string name="config_crear_encuesta">Crear Encuesta</string>
    <string-array name="tiposencuenta">
        <item>Encuesta Cerrada</item>
        <item>Encuesta Abierta</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="c_enc_abierta_tit">Creador de encuesta abierta</string>
    <string name="c_enc_abierta_lab_preguntas">Preguntas:</string>
    <string name="cardbot_borrar">borrar</string>
    <string name="det_pregabierta_lab">Enunciado:</string>
    <string name="det_pregabierta_tit">Detalle de la pregunta</string>
</resources>
